# splash-start

./: CMakeLists.txt  README.md
script/: splash-start.bash
src/: main.cpp
